# ai-freelance-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  api.py  bandit.yml  cli.py  codecov.yml  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  main.py  makefile  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements-gpu.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  scheduler.py  setup.cfg  setup.py  start.py  tox.ini  webpack.config.js  worker.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  tests.yml
ai/: __init__.py
ai/configs/: embeddings_config.json  nlp_config.json  textgen_config.json  translation_config.json
ai/models/: hybrid_model_loader.py
backup/: backup_config.json  backup_schedule.json
blockchain/: dao_manager.py  nft_manager.py  smart_contract_manager.py  token_manager.py  wallet_manager.py
blockchain/arbitration/: dao_arbitration_system.py
blockchain/contracts/: DAOGovernance.sol  JobContract.sol  PaymentEscrow.sol  ReputationToken.sol
blockchain/integrations/: __init__.py  binance_integration.py  ethereum_integration.py  polygon_integration.py
blockchain/nft/: cross_platform_reputation.py  reputation_nft.py
blockchain/tokenization/: income_tokenization.py
config/: ai_config.json  automation.json  backup_config.json  config_manager.py  database.json  deploy.json  logging.json  notifications.json  performance.json  platforms.json  recovery_plan.json  security.json  settings.json  ui_config.json
config/profiles/: README.md  default.json  development.json  low_resource.json  production.json  staging.json
config/schemas/: ai_config.schema.json  automation.schema.json  backup_config.schema.json  database.schema.json  deploy.schema.json  logging.schema.json  notifications.schema.json  performance.schema.json  platforms.schema.json  profile.schema.json  security.schema.json  settings.schema.json  ui_config.schema.json
core/: __init__.py
core/ai_management/: __init__.py  adaptive_model_loader.py  ai_model_hub.py  intelligent_model_manager.py  lazy_model_loader.py  memory_monitor.py  model_optimizer.py  model_performance_monitor.py  model_registry.py
core/analytics/: __init__.py  dead_season_predictor.py  market_analyzer.py  market_trend_predictor.py  predictive_analytics.py  price_predictor.py  success_predictor.py
core/automation/: __init__.py  auto_freelancer_core.py  decision_engine.py  intelligent_hub.py  job_analyzer.py  quality_controller.py  reputation_manager.py  saga_orchestrator.py  task_lifecycle_manager.py  task_orchestrator.py
core/communication/: __init__.py  context_manager.py  empathetic_communicator.py  multilingual_support.py  sentiment_analyzer.py  tone_adjuster.py
core/config/: __init__.py  config_migrator.py  config_validator.py  env_config_manager.py  env_loader.py  hierarchical_config_manager.py  legacy_config_adapter.py  unified_config_manager.py
core/dependency/: __init__.py  dependency_manager.py  service_locator.py
core/error_handling/: error_hierarchy.py
core/learning/: __init__.py  continuous_learning_system.py  feedback_analyzer.py  knowledge_base.py  pattern_extractor.py
core/monitoring/: __init__.py  alert_manager.py  anomaly_detection.py  black_box_recorder.py  intelligent_monitoring_system.py  memory_optimizer.py  metrics_collector.py  resource_optimizer.py  threshold_manager.py  trend_analyzer.py
core/payment/: __init__.py  enhanced_payment_processor.py  fraud_detection_system.py
core/performance/: __init__.py  cache_performance_monitor.py  intelligent_cache_system.py  load_predictor.py  memory_optimizer.py  resource_adaptor.py  strategy_selector.py
core/security/: __init__.py  advanced_crypto_system.py  audit_logger.py  db_ssl_validator.py  encryption_engine.py  fraud_detector.py  key_manager.py  secret_vault.py  security_config_manager.py
core/services/: base_service.py
core/transparency/: client_transparency_system.py
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: init-ssl.sh  nginx.conf
docker/prometheus/: alert_rules.yml  prometheus.yml
docs/api/: integrations.md  swagger.yaml
logs/: log_rotation_config.json
migrations/: __init__.py  alembic.ini  env.py  migration_manager.py  unified_migration_manager.py
migrations/data_migrations/: convert_old_job_format.py
migrations/versions/: 001_initial_schema.py  002_add_ai_models.py  003_add_blockchain.py  004_add_monitoring.py
plugins/: base_plugin.py  plugin_manager.py
plugins/ai_plugins/: __init__.py  claude_plugin.py  gemini_plugin.py  gpt_plugin.py  whisper_plugin.py
plugins/integration_plugins/: __init__.py  discord_plugin.py  email_plugin.py  slack_plugin.py  telegram_plugin.py  voice_assistant.py  voice_assistant_core.py  voice_assistant_enhanced.py  voice_assistant_secure.py
plugins/platform_plugins/: __init__.py  custom_platform_plugin.py  fl_plugin.py  freelance_ru_plugin.py  kwork_plugin.py  upwork_plugin.py
plugins/theme_plugins/: __init__.py  custom_theme_plugin.py  dark_theme_plugin.py  light_theme_plugin.py
scripts/: __init__.py  high_volume_proposal_sender.py
scripts/deployment/: deploy_production.py  rollback_deployment.py  scale_resources.py  update_system.py
scripts/maintenance/: backup_system.py  cleanup_old_data.py  health_check.py  optimize_database.py  rotate_logs.py
scripts/monitoring/: alert_on_issues.py  check_system_health.py  generate_reports.py  monitor_performance.py
scripts/setup/: configure_system.py  detect_device_profile.py  first_time_setup.py  (+3 more)
services/: service_registry.py
tests/: __init__.py  conftest.py  fixtures.py
tools/: code_analyzer.py  template_generator.py
ui/: __init__.py  main_window.py  styles.py  theme_manager.py
venv-upgrade/: pyvenv.cfg
(+106 files in other folders)
