[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-freelance-automation"
version = "1.0.0"
description = "Fully autonomous AI freelancer that replaces humans on freelance platforms: finds jobs, communicates, delivers, gets paid."
readme = "README.md"
authors = [{ name = "Autonomous Systems Lab", email = "dev@ai-freelance-automation.dev" }]
maintainers = [{ name = "Core Team", email = "support@ai-freelance-automation.dev" }]
license = { text = "Proprietary" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: Security :: Cryptography",
]
keywords = [
    "ai", "freelance", "automation", "llm", "transcription", "translation", "copywriting",
    "autonomous-agent", "self-healing", "payment", "blockchain", "gdpr", "pci-dss"
]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core
    "pydantic>=2.5.0,<3.0.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "argon2-cffi>=23.1.0",
    "aiofiles>=23.2.0",

    # AI & ML
    "openai>=1.10.0",
    "anthropic>=0.20.0",
    "transformers>=4.35.0",
    "torch>=2.1.0; platform_machine != 'arm64' or platform_system != 'Darwin'",
    "torchaudio>=2.1.0; platform_machine != 'arm64' or platform_system != 'Darwin'",
    "faster-whisper>=1.0.0",
    "sentence-transformers>=2.3.0",
    "langchain>=0.1.0",
    "llama-cpp-python>=0.2.50; sys_platform != 'win32'",

    # Web & APIs
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # Payments
    "stripe>=6.0.0",
    "paypal-checkout-serversdk>=1.0.0",
    "yoomoney>=0.3.0",
    "web3>=6.10.0",

    # Data & Storage
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "motor>=3.3.0",  # async MongoDB
    "boto3>=1.34.0",
    "google-cloud-storage>=2.14.0",

    # Monitoring & Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "datadog>=0.45.0",

    # Utilities
    "tenacity>=8.2.0",
    "schedule>=1.2.0",
    "diskcache>=5.6.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.20.0",
    "tqdm>=4.66.0",

    # Security
    "tink>=1.8.0",  # Google Tink for crypto
    "secure-smtplib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "types-requests",
    "types-pyyaml",
    "pre-commit>=3.5.0",
]
ui = [
    "streamlit>=1.28.0",
    "gradio>=4.10.0",
]
gpu = [
    "torch>=2.1.0+cu121; sys_platform == 'linux'",
    "torchaudio>=2.1.0+cu121; sys_platform == 'linux'",
]
all = [
    "ai-freelance-automation[dev,ui,gpu]",
]

[project.urls]
Homepage = "https://ai-freelance-automation.dev"
Documentation = "https://docs.ai-freelance-automation.dev"
Repository = "https://github.com/ai-freelance-automation/core"
Changelog = "https://github.com/ai-freelance-automation/core/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "plugins*", "utils*", "tests*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.txt", "*.pem", "*.env.example"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "W", "F", "I", "B", "C4", "SIM", "UP", "TID", "PT", "RUF"]
ignore = ["E501"]  # handled by black
fixable = ["ALL"]
unfixable = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --cov=core --cov=services --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["core", "services", "utils"]
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]