[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-freelance-automation"
version = "1.2.0"
description = "AI-Powered Freelance Automation Platform with Blockchain Integration"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [
    {name = "A-T-0-M-1-K", email = "atomik.dev@example.com"}
]
maintainers = [
    {name = "AI Freelance Automation Team", email = "support@ai-freelance-automation.io"}
]
keywords = [
    "freelance", "automation", "ai", "blockchain", "nft", "smart-contracts",
    "machine-learning", "natural-language-processing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

# Зависимости времени выполнения (минимальный набор)
dependencies = [
    "fastapi>=0.100.0,<0.110.0",
    "uvicorn[standard]>=0.23.0,<0.25.0",
    "pydantic>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "redis>=4.5.0,<5.0.0",
    "cryptography>=41.0.0,<42.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "web3>=6.0.0,<7.0.0",
    "structlog>=23.1.0,<24.0.0"
]

# Опциональные зависимости (экстра)
[project.optional-dependencies]
gpu = [
    "torch>=2.0.0,<2.2.0",
    "transformers>=4.30.0,<5.0.0",
    "accelerate>=0.21.0,<0.23.0",
    "bitsandbytes>=0.41.0,<0.42.0",
    "sentence-transformers>=2.2.0,<3.0.0"
]
dev = [
    "ruff>=0.1.0,<0.2.0",
    "black>=23.7.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",
    "ipython>=8.14.0,<9.0.0",
    "debugpy>=1.6.0,<2.0.0"
]
test = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "factory-boy>=3.2.0,<4.0.0",
    "faker>=19.0.0,<20.0.0"
]
prod = [
    "gunicorn>=21.2.0,<22.0.0",
    "uvloop>=0.17.0,<0.18.0",
    "prometheus-client>=0.17.0,<0.18.0",
    "sentry-sdk[fastapi]>=1.30.0,<2.0.0",
    "celery[redis]>=5.3.0,<6.0.0"
]

[project.scripts]
ai-freelance = "main:main"
freelance-cli = "cli:main"

[project.urls]
Homepage = "https://github.com/A-T-0-M-1-K/ai-freelance-automation"
Documentation = "https://github.com/A-T-0-M-1-K/ai-freelance-automation/tree/main/docs"
Repository = "https://github.com/A-T-0-M-1-K/ai-freelance-automation"
Issues = "https://github.com/A-T-0-M-1-K/ai-freelance-automation/issues"
Changelog = "https://github.com/A-T-0-M-1-K/ai-freelance-automation/blob/main/CHANGELOG.md"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "core*", "platforms*", "blockchain*", "services*", "plugins*", "ui*", "scripts*"]
exclude = ["tests*", "docs*", "docker*", "tools*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md", "*.template", "*.sql", "*.cfg", "*.ini"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.py[co]", ".pytest_cache", ".mypy_cache", ".ruff_cache", ".git*"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.ruff]
target-version = "py310"
line-length = 100
extend-select = ["I", "UP", "RUF"]
extend-ignore = ["E501", "D203", "D212"]

[tool.ruff.isort]
known-first-party = ["ai_freelance_automation", "core", "platforms", "blockchain", "services"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=core",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests (skip with -m 'not slow')",
    "gpu: GPU-requiring tests"
]

[tool.coverage.run]
branch = true
source = ["core", "services", "platforms", "blockchain", "ai"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]