# AI_FREELANCE_AUTOMATION/setup.cfg
# Configuration for build, packaging, testing, linting, and metadata
# Ensures compatibility, reproducibility, and CI/CD readiness

[metadata]
name = ai-freelance-automation
version = 1.0.0
description = Fully autonomous AI freelancer that replaces humans on freelance platforms
long_description = file: README.md
long_description_content_type = text/markdown
author = AI Freelance Automation Team
author_email = contact@ai-freelance-automation.systems
url = https://github.com/ai-freelance-automation/core
license = Apache Software License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business
    Topic :: Internet
keywords =
    ai,
    automation,
    freelance,
    transcription,
    translation,
    copywriting,
    autonomous-agent,
    self-healing

[options]
packages = find:
include_package_data = true
python_requires = >=3.10,<3.13
install_requires =
    aiohttp>=3.9.0
    requests>=2.31.0
    pydantic>=2.5.0
    cryptography>=41.0.0
    python-jose[cryptography]>=3.3.0
    sqlalchemy>=2.0.0
    asyncpg>=0.28.0
    redis>=5.0.0
    celery>=5.3.0
    prometheus-client>=0.19.0
    opentelemetry-api>=1.22.0
    opentelemetry-sdk>=1.22.0
    langchain>=0.1.0
    openai>=1.10.0
    anthropic>=0.7.0
    transformers>=4.35.0
    torch>=2.1.0
    numpy>=1.24.0
    pandas>=2.1.0
    scikit-learn>=1.3.0
    python-dotenv>=1.0.0
    tenacity>=8.2.0
    structlog>=23.2.0
    watchdog>=3.0.0
    fastapi>=0.104.0
    uvicorn>=0.24.0
    stripe>=6.0.0
    paypalrestsdk>=1.13.0
    yoomoney>=0.3.0
    web3>=6.10.0
    psycopg2-binary>=2.9.0
    pymongo>=4.6.0

[options.extras_require]
dev =
    black>=23.10.0
    isort>=5.12.0
    flake8>=6.1.0
    mypy>=1.7.0
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pre-commit>=3.5.0
    bandit>=1.7.5
    safety>=2.3.5
    types-requests
    types-python-dateutil
gpu =
    torch>=2.1.0+cu118; sys_platform != "darwin"
    torchvision>=0.16.0+cu118; sys_platform != "darwin"
local-ai =
    llama-cpp-python>=0.2.11
    sentence-transformers>=2.2.0
monitoring =
    grafana-client>=4.0.0
    datadog>=1.20.0
docs =
    sphinx>=7.2.0
    sphinx-rtd-theme>=1.3.0
    myst-parser>=2.0.0

[options.package_data]
* = *.yaml, *.yml, *.json, *.txt, *.md, *.env.example

[options.entry_points]
console_scripts =
    ai-freelance = main:main

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv,venv,logs,tests/fixtures

[isort]
profile = black
line_length = 100
skip = .git,__pycache__,build,dist,.venv,venv,logs

[mypy]
python_version = 3.11
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True
plugins = pydantic.mypy

[tool:pytest]
testpaths = tests
addopts =
    --strict-markers
    --tb=short
    --verbose
    --cov=core
    --cov=services
    --cov=plugins
    --cov-report=html
    --cov-report=term-missing
asyncio_mode = auto
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
source = core, services, plugins, main.py
omit = */tests/*, */venv/*, */.venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
show_missing = True
precision = 2

[bdist_wheel]
universal = 0